# omz_ignore_theme

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  tox.ini
tests/: test_main.py
