[tool.poetry]
name = "omz_theme_ignore"
version = "0.1.0"
description = ""
authors = ["Wojciech Semik <wojtek.semik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
