[tool.poetry]
name = "omz_theme_ignore"
version = "0.1.0"
description = "Easy add current random theme to ZSH_THEME_RANDOM_IGNORED section in .zshrc file."
authors = ["PaterIT <paterit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
